go-cluster/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  tls:
  - secretName: app-ingress-tls
  ingressClassName: nginx
  rules:
  - host: "app.go-cinch.top"
    http:
      paths:
      - path: /api/auth/
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
  - host: 'vue3.go-cinch.top'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue3
            port:
              number: 80
  - host: 'react.go-cinch.top'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react
            port:
              number: 80
  - host: 'asynqmon.go-cinch.top'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asynqmon
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
spec:
  tls:
  - secretName: grafana-ingress-tls
  ingressClassName: nginx
  rules:
  - host: 'grafana.go-cinch.top'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
spec:
  tls:
  - secretName: minio-ingress-tls
  ingressClassName: nginx
  rules:
  - host: 'minio-api.go-cinch.top'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              name: http-minio
  - host: 'minio.go-cinch.top'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-ui
            port:
              name: http-minio-ui
